--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/style/styles.css">
+    <link rel="stylesheet" href="style/styles.css">
 
 <body>
     <header class="header">
@@ -41,7 +41,7 @@
       <a href=""><button class="btn-primary">Launch Live Preview</button></a>
     </div>
     <div class="image-container">
-      <img src="/image/wc-mini.png" alt="Webflow Conference 2022" class="highlight-image" />
+      <img src="image/wc-mini.png" alt="Webflow Conference 2022" class="highlight-image" />
     </div>
   </section>
 </main>
