added contained and productive users feild

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href=""><button class="btn-primary">Sign Up</button></a>
         </nav>
         <div class="banner">
-            <div class="banner-container">
+            <div class="container banner-container">
                 <h2 class="banner-title raleway-banner" style="font-size: 50px;">Cool Dark UI Template for <br> Webflow
                     Agencies!</h2>
                 <a href=""><button class="btn-primary">Stay Focused</button></a>
@@ -31,21 +31,40 @@
         </div>
     </header>
 
-    <main>
-        <main>
-            <section class="action-highlight">
-                <div class="action-content">
-                    <h2 class="raleway-banner" style="font-size: 42px;">See It in Action</h2>
-                    <p class="action-description raleway-banner grey" style="font-size: 24px;">Explore the live preview
-                        and imagine your <br> brand in this bold new look.</p>
-                    <a href=""><button class="btn-primary">Launch Live Preview</button></a>
+
+    <main class="container">
+        <section class="action-highlight">
+            <div class="action-content">
+                <h2 class="raleway-banner" style="font-size: 42px;">See It in Action</h2>
+                <p class="action-description raleway-banner" style="font-size: 24px; color: #25243279;">Explore the live
+                    preview
+                    and imagine your <br> brand in this bold new look.</p>
+                <a href=""><button class="btn-primary">Launch Live Preview</button></a>
+            </div>
+            <div>
+                <img src="image/wc-mini.png" alt="Webflow Conference 2022" class="highlight-image" />
+            </div>
+        </section>
+        <section class="pdt-users">
+            <h2 class="users-sec-title">Joined Thousands of Productive Users</h2>
+            <div class="users-data-info">
+                <div class="users-data">
+                    <h3 class="data-title">50K</h3>
+                    <p class="data-description">Active Users</p>
                 </div>
-                <div class="image-container">
-                    <img src="image/wc-mini.png" alt="Webflow Conference 2022" class="highlight-image" />
+                <div class="users-data">
+                    <h3 class="data-title">2M+</h3>
+                    <p class="data-subtitle">Focus Sessions</p>
                 </div>
-            </section>
-        </main>
+                <div class="users-data">
+                    <h3 class="data-title">95%</h3>
+                    <p class="data-subtitle">Satisfaction</p>
+                </div>
+            </div>
+
+        </section>
     </main>
+
     <footer>
 
     </footer>
