productive users section complete(vai matha ghuraitasa)

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
             </div>
         </section>
         <section class="pdt-users">
-            <h2 class="users-sec-title">Joined Thousands of Productive Users</h2>
+            <h2 class="users-sec-title raleway-banner" style="font-size: 38px; font-weight: bold; color:#252432;">Joined Thousands of Productive Users</h2>
             <div class="users-data-info">
                 <div class="users-data">
-                    <h3 class="data-title">50K</h3>
-                    <p class="data-description">Active Users</p>
+                    <h3 class="data-title blue-font-styles inter-logo">50K</h3>
+                    <p class="data-description desp-style inter-logo">Active Users</p>
                 </div>
                 <div class="users-data">
-                    <h3 class="data-title">2M+</h3>
-                    <p class="data-subtitle">Focus Sessions</p>
+                    <h3 class="data-title blue-font-styles inter-logo">2M+</h3>
+                    <p class="data-description desp-style inter-logo">Focus Sessions</p>
                 </div>
                 <div class="users-data">
-                    <h3 class="data-title">95%</h3>
-                    <p class="data-subtitle">Satisfaction</p>
+                    <h3 class="data-title blue-font-styles inter-logo">95%</h3>
+                    <p class="data-description desp-style inter-logo">Satisfaction</p>
                 </div>
             </div>
 
