--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             </div>
         </section>
         <section class="pdt-users">
-            <h2 class="users-sec-title raleway-banner" style="font-size: 38px; font-weight: bold; color:#252432;">Joined Thousands of Productive Users</h2>
+            <h2 class="users-sec-title raleway-banner" style="font-size: 38px; font-weight: bold; color:#252432;">Joined
+                Thousands of Productive Users</h2>
             <div class="users-data-info">
                 <div class="users-data">
                     <h3 class="data-title blue-font-styles inter-logo">50K</h3>
@@ -60,6 +61,73 @@
                     <h3 class="data-title blue-font-styles inter-logo">95%</h3>
                     <p class="data-description desp-style inter-logo">Satisfaction</p>
                 </div>
+            </div>
+
+        </section>
+        <section class="user-feedback container">
+            <h3 class="section-title raleway-banner" style="font-size: 42px; font-weight: bold; color: #252432;">What
+                our users say</h3>
+            <div class="review-list">
+                <!-- card1 -->
+                <div class="review-card">
+                    <h5 class="star-rating">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                    </h5>
+                    <h3 class="rev-title raleway-banner">Loved by Designers</h3>
+                    <p class="rev-description">“This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="review-header">
+                        <img src="image/avatar.png" alt="Reviewer photo" class="review-avatar">
+                        <div class="reviewer-info">
+                            <p class="name">Reviewer Name</p>
+                            <p class="date">Date</p>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- card2-->
+                <div class="review-card">
+                    <h5 class="star-rating">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                    </h5>
+                    <h3 class="rev-title raleway-banner">Loved by Designers</h3>
+                    <p class="rev-description">“This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="review-header">
+                        <img src="image/avatar.png" alt="Reviewer photo" class="review-avatar">
+                        <div class="reviewer-info">
+                            <p class="name">Reviewer Name</p>
+                            <p class="date">Date</p>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- card3 -->
+                <div class="review-card">
+                    <h5 class="star-rating">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                        <img src="image/icon-star.png" alt="">
+                    </h5>
+                    <h3 class="rev-title raleway-banner">Loved by Designers</h3>
+                    <p class="rev-description">“This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="review-header">
+                        <img src="image/avatar.png" alt="Reviewer photo" class="review-avatar">
+                        <div class="reviewer-info">
+                            <p class="name">Reviewer Name</p>
+                            <p class="date">Date</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
         </section>
