remove space from between reviewer name and date

--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                     <div class="review-header">
                         <img src="image/avatar.png" alt="Reviewer photo" class="review-avatar">
                         <div class="reviewer-info">
-                            <p class="name">Reviewer Name</p>
-                            <p class="date">Date</p>
+                            <li class="name">Reviewer Name</li>
+                            <li class="date">Date</li>
                         </div>
                     </div>
                 </div>
 
-                 <!-- card2-->
+                <!-- card2-->
                 <div class="review-card">
                     <h5 class="star-rating">
                         <img src="image/icon-star.png" alt="">
@@ -102,13 +102,13 @@
                     <div class="review-header">
                         <img src="image/avatar.png" alt="Reviewer photo" class="review-avatar">
                         <div class="reviewer-info">
-                            <p class="name">Reviewer Name</p>
-                            <p class="date">Date</p>
+                            <li class="name">Reviewer Name</li>
+                            <li class="date">Date</li>
                         </div>
                     </div>
                 </div>
 
-                 <!-- card3 -->
+                <!-- card3 -->
                 <div class="review-card">
                     <h5 class="star-rating">
                         <img src="image/icon-star.png" alt="">
@@ -122,8 +122,8 @@
                     <div class="review-header">
                         <img src="image/avatar.png" alt="Reviewer photo" class="review-avatar">
                         <div class="reviewer-info">
-                            <p class="name">Reviewer Name</p>
-                            <p class="date">Date</p>
+                            <li class="name">Reviewer Name</li>
+                            <li class="date">Date</li>
                         </div>
                     </div>
                 </div>
@@ -131,9 +131,41 @@
             </div>
 
         </section>
+
+        <section class="get-start container">
+
+        </section>
+
+        <section class="get-in-touch container">
+            <div class="contact-me">
+                <h3 class="raleway-banner" style="font-size: 97px; font-weight: bold;">Let’s Get in Touch</h3>
+            </div>
+            <div class="contact-me-form inter-logo">
+               
+            </div>
+
+        </section>
     </main>
 
-    <footer>
+    <footer class="footer">
+        <div class="footer-content">
+            <h2 class="inter-logo logo-title"
+                style="color: #4E47FF; font-weight: 900px; font-size: 100px; text-align: center;">LOGO</h2>
+            <div class="footer-desc" style="text-align: center; color: rgba(0, 0, 0, 0.39);">Ready to elevate your
+                online
+                presence? Contact us today to discuss your project and discover how we can bring your vision to life.
+            </div>
+
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">How It Works</a></li>
+                    <li><a href="">Service</a></li>
+                </ul>
+            </nav>
+        </div>
+
 
     </footer>
 
