--- a/index.html
+++ b/index.html
@@ -132,41 +132,51 @@
 
         </section>
 
-        <section class="get-start container">
-
-        </section>
 
         <section class="get-in-touch container">
             <div class="contact-me">
-                <h3 class="raleway-banner" style="font-size: 97px; font-weight: bold;">Let’s Get in Touch</h3>
+                <h3 class="raleway-banner" style="font-size: 97px; font-weight: bold; margin-top: 170px;">Let’s Get in
+                    Touch</h3>
             </div>
             <div class="contact-me-form inter-logo">
-               
+                <form>
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="email" placeholder="example@email.com">
+                    </div>
+                    <div class="form-group">
+                        <label>Name</label>
+                        <input type="text" placeholder="full name">
+                    </div>
+                    <div class="form-group">
+                        <label>Message</label>
+                        <textarea style="height: 135px;" class="inter-logo"
+                            placeholder="write your message...."></textarea>
+
+                    </div>
+                    <button style="width:497px; height:62px;" class="btn-primary">Get in Touch</button>
+
+                </form>
             </div>
 
         </section>
     </main>
 
-    <footer class="footer">
-        <div class="footer-content">
-            <h2 class="inter-logo logo-title"
-                style="color: #4E47FF; font-weight: 900px; font-size: 100px; text-align: center;">LOGO</h2>
-            <div class="footer-desc" style="text-align: center; color: rgba(0, 0, 0, 0.39);">Ready to elevate your
-                online
-                presence? Contact us today to discuss your project and discover how we can bring your vision to life.
-            </div>
+    <footer style="background-color: white;">
 
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">How It Works</a></li>
-                    <li><a href="">Service</a></li>
-                </ul>
-            </nav>
-        </div>
+        <section class="footer">
+        <div class="footer-logo inter-logo" style="font-weight:bolder;">LOGO</div>
+        <p class="subheading">
+            Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
+        </p>
+        <nav class="nav ">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">How it Works</a>
+            <a href="">Services</a>
+        </nav>
 
-
+        </section>
     </footer>
 
 </body>
