--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 
-<body>
+<body style="align-items: center; position: relative;">
     <header class="header">
         <nav class="inter-logo">
             <h3 style="color: #4E47FF; font-size: 34px; font-weight: 900;">LOGO</h3>
@@ -162,14 +162,14 @@
         </section>
     </main>
 
-    <footer style="background-color: white;">
+    <footer style="background-color: white; max-width: auto; width: 100%; align-items: center; position: relative;">
 
         <section class="footer">
         <div class="footer-logo inter-logo" style="font-weight:bolder;">LOGO</div>
-        <p class="subheading">
+        <p style="text-align: center; color: #8987A1; " class="sub-heading">
             Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
         </p>
-        <nav class="nav ">
+        <nav class="nav">
             <a href="">Home</a>
             <a href="">About</a>
             <a href="">How it Works</a>
